@@ -219,6 +219,8 @@ def test_multi_format_output(tmp_path):
             '        "obj": "",\n'
             '        "line": 1,\n'
             '        "column": 0,\n'
+            '        "endLine": null,\n'
+            '        "endColumn": null,\n'
             f'        "path": {escaped_source_file},\n'
             '        "symbol": "missing-module-docstring",\n'
             '        "message": "Missing module docstring",\n'
@@ -230,6 +232,8 @@ def test_multi_format_output(tmp_path):
             '        "obj": "",\n'
             '        "line": 1,\n'
             '        "column": 0,\n'
+            '        "endLine": null,\n'
+            '        "endColumn": null,\n'
             f'        "path": {escaped_source_file},\n'
             '        "symbol": "line-too-long",\n'
             '        "message": "Line too long (1/2)",\n'
